--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ code-quality:
     #- Invoke-WebRequest https://download.visualstudio.microsoft.com/download/pr/7afca223-55d2-470a-8edc-6a1739ae3252/abd170b4b0ec15ad0222a809b761a036/ndp48-x86-x64-allos-enu.exe -O ndp48-x86-x64-allos-enu.exe
     #- .\ndp48-x86-x64-allos-enu.exe /q /norestart
     # installs Visual Studio 2022 Build tools
-    - choco install visualstudio2022buildtools
+    - choco install -y visualstudio2022buildtools
   script:
     - cd dotnet
     # downloads .NET dependencies
