--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ container-image:
   script:
     - docker build -f dotnet/src/AspNetMvcDemoWebApp/Dockerfile -t ${CONTAINER_REPOSITORY}:${CONTAINER_APP_VERSION} dotnet/
     - docker login -u $CONTAINER_REGISTRY_USER -p $CONTAINER_REGISTRY_PASSWD $CONTAINER_REGISTRY_DOMAIN
-    - if [ "${CI_COMMIT_BRANCH}" == "${CI_DEFAULT_BRANCH}" ]; then docker push ${CONTAINER_REPOSITORY}:${CONTAINER_APP_VERSION}; fi
+    - if ( "${CI_COMMIT_BRANCH}" -eq "${CI_DEFAULT_BRANCH}" ) { docker push ${CONTAINER_REPOSITORY}:${CONTAINER_APP_VERSION} }
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: always
