--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ code-quality:
     - nuget restore
     # builds the .NET solution
     - "& 'C:/Program Files (x86)/Microsoft Visual Studio/2022/BuildTools/MSBuild/Current/Bin/amd64/MSBuild.exe'"
+    # TODO: lints, tests
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: always
